# metricflow-analytics

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data_generator/: config.py  generate.py
dbt_metricflow/: dbt_project.yml  packages.yml  profiles.yml
dbt_metricflow/macros/: analytics_helpers.sql
dbt_metricflow/models/: exposures.yml
dbt_metricflow/models/advanced/: _advanced.yml  anomaly_flags.sql  churn_features.sql  cohort_retention.sql  funnel_analysis.sql  ltv_features.sql  north_star_metrics.sql  rfm_segmentation.sql  subscription_survival.sql
dbt_metricflow/models/marts/: _marts.yml
dbt_metricflow/models/marts/customer_health/: fct_health_scores.sql
dbt_metricflow/models/staging/: _staging.yml  stg_events.sql  stg_marketing_touches.sql  stg_payments.sql  stg_sessions.sql  stg_subscriptions.sql  stg_users.sql
dbt_metricflow/tests/: assert_health_score_range.sql  assert_mrr_not_negative.sql  assert_retention_rate_valid.sql
dbt_metricflow/tests/generic/: test_positive_value.sql  test_valid_percentage.sql
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md  INTERVIEW_GUIDE.md
evidence_dashboards/: evidence.plugins.yaml  package.json
evidence_dashboards/pages/: churn.md  funnel.md  index.md  product.md  retention.md  revenue.md
ml_pipeline/: anomaly_detection.py  churn_model.py  forecasting.py  ltv_model.py  run_all.py  segmentation.py
scripts/: load_to_duckdb.py
tests/: test_data_generator.py
(+10 files in other folders)
